--- a/index.html
+++ b/index.html
@@ -1,9 +1,24 @@
+}
+
+
+
+</script> 
+
+
+</body>  
+</html>
 <!DOCTYPE html>  <html lang="en">  
 <head>  
 <meta charset="UTF-8">  
 <title>ShopOne in</title>  
-<meta name="viewport" content="width=device-width, initial-scale=1">  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">  
+<meta name="viewport" content="width=device-width, initial-scale=1">  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"> 
+
+
+
 <style>  
+
+
+
 body{margin:0;font-family:Arial;background:#f2f2f2}  
 header{background:#fff;padding:12px;}  
   
@@ -407,23 +422,40 @@ border:none;
 
 </head>  
 <body>  
-<header style="display:flex;justify-content:space-between;align-items:center;padding:12px 15px">
-<span style="font-size:20px;font-weight:bold">ShopOne in</span>
 
-<i class="fa-regular fa-user"
-   onclick="openAccount()"
-   style="font-size:20px;cursor:pointer"></i>  <span id="loginBtns">  
-<span onclick="openAuth('signin')" style="cursor:pointer">Sign In</span>  
-<span onclick="openAuth('signup')" style="cursor:pointer;margin-left:8px">Sign Up</span>  
-</span>  <span id="userInfo" style="display:none">  
-<b id="userName"></b>  
-<span onclick="logout()" style="cursor:pointer;color:red;margin-left:8px">  
-Logout  
-</span>  
-</span>  <span onclick="openCart()" style="cursor:pointer">  
-<i class="fa-solid fa-cart-shopping"></i>  
-</span>  </div>  
-</header>  <div class="grid" id="list"></div>  <div class="page" id="detail">  
+
+<header 
+
+ style="display:flex;justify-content:space-between;align-items:center;padding:12px 15px">
+
+  <!-- LOGO -->
+  <span style="font-size:20px;font-weight:bold">ShopOne in</span>
+
+  <!-- RIGHT ICONS -->
+  <div style="display:flex;gap:18px;align-items:center">
+
+    <!-- USER ICON -->
+    <i class="fa-regular fa-user"
+       onclick="openAccount()"
+       style="font-size:20px;cursor:pointer"></i>
+
+    <!-- ADD TO CART 🛍️ -->
+        <i class="fa-solid fa-bag-shopping"
+       onclick="openCart()"
+       style="font-size:21px;cursor:pointer"></i>
+
+  </div>
+
+
+
+
+
+
+</header> 
+
+
+
+<div class="grid" id="list"></div>  <div class="page" id="detail">  
 <button class="close" onclick="closePage()">X</button>  
 <div id="detailContent"></div>  
 </div>  <footer>  
@@ -435,7 +467,12 @@ Contact Us
 <a href="#"><i class="fab fa-instagram"></i></a>
 
 <p>2026 ShopOne in </p>  
+
+
 </footer>  
+
+
+
 <div id="authBox" style="display:none;position:fixed;inset:0;background:rgba(0,0,0,.6);z-index:200">  
 <div style="background:#fff;width:90%;max-width:320px;margin:80px auto;padding:20px;border-radius:12px">  <h3 id="authTitle">Sign In</h3>  <input id="fullName" placeholder="Full Name" style="width:100%;padding:10px;margin:8px 0">
 
