--- a/index.html
+++ b/index.html
@@ -9,6 +9,29 @@
 <style>  
 
 
+.product-title-row{
+  display:flex;
+  align-items:center;
+  justify-content:space-between;
+  gap:10px;
+}
+
+.share-btn{
+  background:#fff;
+  border:1px solid #e5e7eb;
+  border-radius:50%;
+  width:36px;
+  height:36px;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  cursor:pointer;
+}
+
+.share-btn i{
+  font-size:15px;
+  color:#111;
+}
 
 body{margin:0;font-family:Arial;background:#f2f2f2}  
 header{background:#fff;padding:12px;}  
@@ -177,7 +200,8 @@ transform:scale(0.97);
   color:#0f5ad1;
 }
 
-/* SIMILAR PRODUCTS SECTION */
+/* SIMILAR 
+S SECTION */
 .similar-wrap{
 display:flex;
 gap:12px;
@@ -405,6 +429,88 @@ color:#fff;
 border:none;
 }
 
+.simple-spec{
+  margin-top:16px;
+  font-size:14px;
+  color:#111;
+}
+.simple-spec h3{
+  font-size:15px;
+  margin:12px 0 8px;
+  font-weight:600;
+}
+.simple-row{
+  display:flex;
+  justify-content:space-between;
+  padding:4px 0;
+}
+.simple-key{ color:#555; }
+.simple-val{ color:#000; font-weight:500; }
+
+.site-footer{
+  background:#111;
+  color:#ddd;
+  margin-top:40px;
+  font-size:14px;
+}
+
+.footer-container{
+  display:grid;
+  grid-template-columns:1fr 1fr;
+  gap:30px;
+  padding:30px 16px;
+}
+
+.footer-box h4{
+  color:#fff;
+  margin-bottom:12px;
+  font-size:15px;
+}
+
+.footer-box ul{
+  list-style:none;
+  padding:0;
+  margin:0;
+}
+
+.footer-box ul li{
+  margin-bottom:8px;
+}
+
+.footer-box ul li a{
+  color:#ccc;
+  text-decoration:none;
+}
+
+.footer-box ul li a:hover{
+  color:#fff;
+}
+
+.footer-box p{
+  margin:6px 0;
+  line-height:1.6;
+}
+
+.support-hours{
+  margin-top:10px;
+}
+
+.footer-bottom{
+  border-top:1px solid #333;
+  text-align:center;
+  padding:12px;
+  font-size:13px;
+  color:#aaa;
+}
+
+/* Mobile */
+@media(max-width:768px){
+  .footer-container{
+    grid-template-columns:1fr;
+  }
+}
+
+
 
 
 </style>  
@@ -441,26 +547,19 @@ border:none;
 
 
 
-
 </header> 
 
 
 
-<div class="grid" id="list"></div>  <div class="page" id="detail">  
-<button class="close" onclick="closePage()">X</button>  
-<div id="detailContent"></div>  
-</div>  <footer>  
-<p style="margin:0 0 10px;font-size:15px;font-weight:bold;color:#fff;">  
-Contact Us  
-</p>  <a href="https://wa.me/917879266424"><i class="fab fa-whatsapp"></i></a>
-<a href="mailto:support@shopone.in"><i class="fa fa-envelope"></i></a>
-<a href="#"><i class="fab fa-facebook"></i></a>
-<a href="#"><i class="fab fa-instagram"></i></a>
 
-<p>2026 ShopOne in </p>  
+<div class="grid" id="list"></div>  
+<div class="page" id="detail">  
+  <button class="close" onclick="closePage()">X</button>  
+  <div id="detailContent"></div>  
+</div>
 
 
-</footer>  
+
 
 
 
@@ -567,7 +666,18 @@ details:[
 "✔ Soft cushioned insole",
 "✔ Strong & durable outsole",
 "✔ Long lasting shine finish"
-]
+],
+specs:{
+  "Material":"Synthetic Leather",
+  "Pattern":"Solid",
+  "Color":"Black",
+  "Sole Material":"TPR",
+  "Type":"Formal Shoes",
+  "Fastening & Back Detail":"Lace-Up",
+  "Brand":"ShopOne",
+  "Generic Name":"Men Formal Shoes",
+  "Country of Origin":"India"
+}
 },
 
 {
@@ -584,7 +694,18 @@ details:[
 "✔ Comfortable inner padding",
 "✔ Anti-skid sole grip",
 "✔ Premium tan color finish"
-]
+],
+specs:{
+  "Material":"Synthetic Leather",
+  "Pattern":"Solid",
+  "Color":"Tan",
+  "Sole Material":"TPR",
+  "Type":"Formal Shoes",
+  "Fastening & Back Detail":"Lace-Up",
+  "Brand":"ShopOne",
+  "Generic Name":"Men Formal Shoes",
+  "Country of Origin":"India"
+}
 },
 
 {
@@ -601,7 +722,18 @@ details:[
 "✔ Sweat-free inner lining",
 "✔ Durable rubber sole",
 "✔ Easy to clean surface"
-]
+],
+specs:{
+  "Material":"Synthetic Leather",
+  "Pattern":"Solid",
+  "Color":"Black",
+  "Sole Material":"TPR",
+  "Type":"Formal Shoes",
+  "Fastening & Back Detail":"Lace-Up",
+  "Brand":"ShopOne",
+  "Generic Name":"Men Formal Shoes",
+  "Country of Origin":"India"
+}
 },
 
 {
@@ -618,7 +750,18 @@ details:[
 "✔ Lightweight & breathable",
 "✔ Soft EVA sole",
 "✔ Stylish street look"
-]
+],
+specs:{
+  "Material":"Denim Fabric",
+  "Pattern":"Printed",
+  "Color":"Blue",
+  "Sole Material":"EVA",
+  "Type":"Sneakers",
+  "Fastening & Back Detail":"Lace-Up",
+  "Brand":"ShopOne",
+  "Generic Name":"Casual Shoes",
+  "Country of Origin":"India"
+}
 },
 
 {
@@ -635,7 +778,18 @@ details:[
 "✔ Shock absorb sole",
 "✔ Flexible grip base",
 "✔ Premium sporty finish"
-]
+],
+specs:{
+  "Material":"Mesh & Synthetic",
+  "Pattern":"Solid",
+  "Color":"Black",
+  "Sole Material":"Rubber",
+  "Type":"Sports Sneakers",
+  "Fastening & Back Detail":"Lace-Up",
+  "Brand":"ShopOne",
+  "Generic Name":"Sports Shoes",
+  "Country of Origin":"India"
+}
 },
 
 {
@@ -652,7 +806,18 @@ details:[
 "✔ Breathable inner fabric",
 "✔ Non-slip sole",
 "✔ Stylish modern look"
-]
+],
+specs:{
+  "Material":"Canvas",
+  "Pattern":"Solid",
+  "Color":"Navy Blue",
+  "Sole Material":"PVC",
+  "Type":"Casual Shoes",
+  "Fastening & Back Detail":"Lace-Up",
+  "Brand":"ShopOne",
+  "Generic Name":"Casual Shoes",
+  "Country of Origin":"India"
+}
 },
 
 {
@@ -669,7 +834,18 @@ details:[
 "✔ Ultra comfort sole",
 "✔ Daily & travel wear",
 "✔ Lightweight construction"
-]
+],
+specs:{
+  "Material":"Mesh Fabric",
+  "Pattern":"Striped",
+  "Color":"Black & Red",
+  "Sole Material":"PVC",
+  "Type":"Slip-on Sneakers",
+  "Fastening & Back Detail":"Slip-On",
+  "Brand":"ShopOne",
+  "Generic Name":"Casual Shoes",
+  "Country of Origin":"India"
+}
 },
 
 {
@@ -686,7 +862,18 @@ details:[
 "✔ Breathable mesh lining",
 "✔ High grip sole",
 "✔ Long-lasting comfort"
-]
+],
+specs:{
+  "Material":"Synthetic & Mesh",
+  "Pattern":"Solid",
+  "Color":"Black",
+  "Sole Material":"Rubber",
+  "Type":"Sneakers",
+  "Fastening & Back Detail":"Lace-Up",
+  "Brand":"ShopOne",
+  "Generic Name":"Casual Shoes",
+  "Country of Origin":"India"
+}
 },
 
 {
@@ -703,7 +890,18 @@ details:[
 "✔ Senior & daily use",
 "✔ Comfortable cushioned base",
 "✔ Strong strap locking"
-]
+],
+specs:{
+  "Material":"Synthetic Leather",
+  "Pattern":"Solid",
+  "Color":"Black",
+  "Sole Material":"PVC",
+  "Type":"Casual Shoes",
+  "Fastening & Back Detail":"Velcro Straps",
+  "Brand":"ShopOne",
+  "Generic Name":"Daily Wear Shoes",
+  "Country of Origin":"India"
+}
 },
 
 {
@@ -720,7 +918,18 @@ details:[
 "✔ Lightweight & flexible",
 "✔ Daily casual wear",
 "✔ Modern premium look"
-]
+],
+specs:{
+  "Material":"Knitted Fabric",
+  "Pattern":"Textured",
+  "Color":"Black",
+  "Sole Material":"EVA",
+  "Type":"Loafers",
+  "Fastening & Back Detail":"Slip-On",
+  "Brand":"ShopOne",
+  "Generic Name":"Casual Loafers",
+  "Country of Origin":"India"
+}
 },
 
 {
@@ -737,7 +946,18 @@ details:[
 "✔ Extra grip sole",
 "✔ Shock absorb base",
 "✔ Long durability"
-]
+],
+specs:{
+  "Material":"Denim Fabric",
+  "Pattern":"Solid",
+  "Color":"Blue",
+  "Sole Material":"Rubber",
+  "Type":"Walking Shoes",
+  "Fastening & Back Detail":"Lace-Up",
+  "Brand":"ShopOne",
+  "Generic Name":"Walking Shoes",
+  "Country of Origin":"India"
+}
 },
 
 {
@@ -754,7 +974,18 @@ details:[
 "✔ Breathable fabric",
 "✔ Flexible sole",
 "✔ Easy to wear"
-]
+],
+specs:{
+  "Material":"Mesh Fabric",
+  "Pattern":"Printed",
+  "Color":"Blue",
+  "Sole Material":"PVC",
+  "Type":"Slip-on Shoes",
+  "Fastening & Back Detail":"Slip-On",
+  "Brand":"ShopOne",
+  "Generic Name":"Casual Shoes",
+  "Country of Origin":"India"
+}
 },
 
 {
@@ -771,7 +1002,18 @@ details:[
 "✔ Breathable mesh upper",
 "✔ Strong traction sole",
 "✔ Ideal for gym & running"
-]
+],
+specs:{
+  "Material":"Breathable Mesh",
+  "Pattern":"Solid",
+  "Color":"Blue",
+  "Sole Material":"EVA",
+  "Type":"Running Shoes",
+  "Fastening & Back Detail":"Lace-Up",
+  "Brand":"ShopOne",
+  "Generic Name":"Sports Shoes",
+  "Country of Origin":"India"
+}
 }
 ];
   
@@ -826,10 +1068,48 @@ detailContent.innerHTML=`
 <img src="${p.img}" style="width:100%;aspect-ratio:1/1;object-fit:cover">  
   
 <div style="padding:15px">  
-<h3>${p.name}</h3>  
+<div class="product-title-row">
+  <h3>${p.name}</h3>
+
+  <button class="share-btn" onclick="shareProduct('${p.name}')">
+    <i class="fa-solid fa-share-nodes"></i>
+  </button>
+</div>
 <div class="stars">${starsHTML(p.ratingValue)} <span>| ${p.ratingCount}</span></div>  
   
-<p><b>₹${p.price}</b> <span class="old">M.R.P ₹${p.mrp}</span></p>  
+<!-- PRICE SECTION (FLIPKART STYLE) -->
+<div style="margin:12px 0">
+
+  <!-- BIG PRICE -->
+  <div style="
+    font-size:28px;
+    font-weight:700;
+    color:#111827;
+  ">
+    ₹${p.price}
+  </div>
+
+  <!-- MRP + OFF -->
+  <div style="
+    display:flex;
+    gap:10px;
+    align-items:center;
+    font-size:14px;
+    margin-top:4px;
+  ">
+    <span style="color:#6b7280;text-decoration:line-through">
+      ₹${p.mrp}
+    </span>
+
+    <span style="
+      color:#16a34a;
+      font-weight:700;
+    ">
+      ${p.off} OFF
+    </span>
+  </div>
+
+</div>
 
 <!-- SIZE SELECTION -->
 <div style="margin-top:12px">
@@ -859,15 +1139,69 @@ detailContent.innerHTML=`
 <p>🚚 Fast & Free Deliver
 <p>🔸 Cash On Delivery</p>
 
-<div class="section">
-<h3>Product Details</h3>
-<ul>
-${p.details.map(d=>`<li>${d}</li>`).join("")}
-</ul>
+<!-- SIMPLE MEESHO STYLE DETAILS -->
+<div class="simple-spec">
+
+  <h3>Product Highlights</h3>
+
+  <div class="simple-row">
+    <div class="simple-key">Material</div>
+    <div class="simple-val">${p.specs["Material"]}</div>
+  </div>
+
+  <div class="simple-row">
+    <div class="simple-key">Pattern</div>
+    <div class="simple-val">${p.specs["Pattern"]}</div>
+  </div>
+
+  <div class="simple-row">
+    <div class="simple-key">Color</div>
+    <div class="simple-val">${p.specs["Color"]}</div>
+  </div>
+
+  <div class="simple-row">
+    <div class="simple-key">Sole Material</div>
+    <div class="simple-val">${p.specs["Sole Material"]}</div>
+  </div>
+
+  <h3>Additional Details</h3>
+
+  <div class="simple-row">
+    <div class="simple-key">Type</div>
+    <div class="simple-val">${p.specs["Type"]}</div>
+  </div>
+
+  <div class="simple-row">
+    <div class="simple-key">Fastening & Back Detail</div>
+    <div class="simple-val">${p.specs["Fastening & Back Detail"]}</div>
+  </div>
+
+  <div class="simple-row">
+  <div class="simple-key">Brand</div>
+  <div class="simple-val">ShopOne In</div>
+</div>
+
+  <div class="simple-row">
+    <div class="simple-key">Generic Name</div>
+    <div class="simple-val">${p.specs["Generic Name"]}</div>
+  </div>
+
+  <div class="simple-row">
+    <div class="simple-key">Country of Origin</div>
+    <div class="simple-val">${p.specs["Country of Origin"]}</div>
+  </div>
+
+</div>
+
 </div>
 
 <div class="fk-section">
-  <h3>Why Buy From ShopOne?</h3>
+  <h3>Why Buy From ShopOne in?</h3>
+
+<div class="fk-item" onclick="fkInfo('price')">
+  <i class="fa-solid fa-tags"></i>
+  <p>Lowest Price</p>
+</div>
 
   <div class="fk-trust">
     <div class="fk-item" onclick="fkInfo('delivery')">
@@ -875,10 +1209,10 @@ ${p.details.map(d=>`<li>${d}</li>`).join("")}
       <p>Fast Delivery</p>
     </div>
 
-    <div class="fk-item" onclick="fkInfo('cod')">
-      <i class="fa-solid fa-money-bill-wave"></i>
-      <p>Cash on Delivery</p>
-    </div>
+   <div class="fk-item" onclick="fkInfo('advance')">
+  <i class="fa-solid fa-money-bill-wave"></i>
+  <p>50% Advance & Balance on Delivery</p>
+</div>
 
     <div class="fk-item" onclick="fkInfo('secure')">
       <i class="fa-solid fa-shield-halved"></i>
@@ -1086,18 +1420,9 @@ checkLogin();
   
 /* ---------- LOGIN STATE ---------- */  
   
-function checkLogin(){  
-let logged = localStorage.getItem("loggedIn");  
-if(logged==="yes"){  
-document.getElementById("loginBtns").style.display="none";  
-document.getElementById("userInfo").style.display="inline";  
-document.getElementById("userName").innerText =  
-localStorage.getItem("userEmail");  
-}else{  
-document.getElementById("loginBtns").style.display="inline";  
-document.getElementById("userInfo").style.display="none";  
-}  
-}  
+function checkLogin(){
+  // Account panel already handles login UI
+}
   
 function logout(){  
 localStorage.removeItem("loggedIn");  
@@ -1276,18 +1601,24 @@ btn.innerText = "Hide reviews";
 }
 
 function fkInfo(type){
+
+  if(type === 'price'){
+    alert("Lowest Price\n\nBest price guaranteed on ShopOne In.");
+  }
+
   if(type === 'delivery'){
     alert("Fast Delivery\n\nDelivered quickly to your doorstep.");
   }
 
-  if(type === 'cod'){
-    alert("Cash on Delivery\n\nPay after receiving the product.");
+  if(type === 'advance'){
+    alert("50% Advance\n\nPay 50% now, balance on delivery.");
   }
 
   if(type === 'secure'){
     alert("Secure Payments\n\n100% safe and protected transactions.");
   }
 }
+
 function pressBtn(btn){
 btn.classList.add("pressed");
 setTimeout(()=>{
@@ -1317,10 +1648,70 @@ function closeAccount(){
 document.getElementById("accountPanel").classList.remove("show");
 }
 
+function shareProduct(name){
+  if(navigator.share){
+    navigator.share({
+      title: name,
+      text: "Check this product on ShopOne In: " + name,
+      url: window.location.href
+    });
+  }else{
+    alert("Sharing not supported on this device");
+  }
+}
+
+
 
 
 </script> 
 
 
+
+
+<footer class="site-footer">
+
+  <div class="footer-container">
+
+    <!-- Help & Support -->
+    <div class="footer-box">
+      <h4>Help & Support</h4>
+      <ul>
+        <li><a href="shipping-policy.html">Shipping Policy</a></li>
+        <li><a href="return-refund.html">Return & Refund Policy</a></li>
+        <li><a href="terms.html">Terms of Service</a></li>
+        <li><a href="privacy.html">Privacy Policy</a></li>
+        <li><a href="about.html">About Us</a></li>
+        <li><a href="faqs.html">FAQs</a></li>
+        <li><a href="contact.html">Contact Us</a></li>
+      </ul>
+    </div>
+
+<!-- Contact Info -->
+<div class="footer-box">
+  <h4>Customer Support Information</h4>
+
+  <p><strong>Phone:</strong> +91 78792 66424</p>
+  <p><strong>Email:</strong> oneanextall@gmail.com</p>
+
+  <p><strong>Address:</strong><br>
+    ShopOne in, Gol Bazar,<br>
+    Near City Kotwali (Main Signal Chowk),<br>
+    Raipur, Chhattisgarh – 492001, India
+  </p>
+
+  <p class="support-hours">
+    <strong>Support Hours:</strong><br>
+    Monday to Friday: 09:00 AM – 06:00 PM
+  </p>
+</div>
+
+  </div>
+
+  <!-- Bottom Line -->
+  <div class="footer-bottom">
+    2026 ShopOne In | 100% Tested
+  </div>
+
+</footer>
 </body>  
 </html>
