--- a/index.html
+++ b/index.html
@@ -567,6 +567,71 @@ border:none;
   padding-bottom:4px;
 }
 
+#shareBox a{
+  font-size:20px;
+  margin:6px;
+  display:inline-block;
+  color:#000;
+}
+
+#shareBox a:hover{
+  transform:scale(1.2);
+}
+
+/* =========================
+   PRODUCT GRID FIX
+   ========================= */
+
+.grid{
+  display:grid;
+  grid-template-columns:repeat(4, 1fr);
+  gap:12px;
+  padding:12px;
+}
+
+/* 💻 Desktop – 4 products */
+@media (min-width:1024px){
+  .grid{
+    grid-template-columns:repeat(4, 1fr);
+  }
+}
+
+/* 📱 Mobile – 2 products */
+@media (max-width:600px){
+  .grid{
+    grid-template-columns:repeat(2, 1fr);
+  }
+}
+
+/* Product card */
+.product{
+  background:#fff;
+  border-radius:10px;
+  padding:10px;
+  box-shadow:0 2px 8px rgba(0,0,0,0.1);
+}
+@media (max-width:600px){
+  .product img{
+    height:140px;
+    object-fit:contain;
+  }
+}
+
+.review-photos{
+  display:flex;
+  gap:8px;
+  margin-top:8px;
+}
+
+.review-photo{
+  width:70px;
+  height:70px;
+  object-fit:cover;
+  border-radius:6px;
+  border:1px solid #ddd;
+}
+
+
 
 
 
@@ -600,6 +665,34 @@ border:none;
        onclick="openCart()"
        style="font-size:21px;cursor:pointer"></i>
 
+<!-- SHARE ICON START -->
+<div style="position:relative;display:inline-block;margin-left:12px">
+
+  <i class="fas fa-share-alt"
+     onclick="toggleShare()"
+     style="font-size:18px;cursor:pointer"></i>
+
+  <!-- SHARE POPUP -->
+  <div id="shareBox"
+   style="display:none;
+   position:absolute;
+   right:0;
+   top:28px;
+   background:#fff;
+   border-radius:10px;
+   box-shadow:0 5px 15px rgba(0,0,0,0.2);
+   padding:10px;
+   z-index:999">
+
+    <a id="shareWhatsapp" target="_blank"><i class="fab fa-whatsapp"></i></a>
+    <a id="shareFacebook" target="_blank"><i class="fab fa-facebook"></i></a>
+    <a id="shareInstagram"><i class="fab fa-instagram"></i></a>
+    <a id="shareTwitter" target="_blank"><i class="fab fa-x-twitter"></i></a>
+    <a id="shareGmail" target="_blank"><i class="fas fa-envelope"></i></a>
+
+  </div>
+</div>
+<!-- SHARE ICON END -->
   </div>
 
 
@@ -726,6 +819,15 @@ let s=d[5]+d[4]+d[3]+d[2]+d[1];
 d[5]+=total-s;  
 return d;  
 }  
+
+
+/* REVIEW PLACEHOLDER IMAGES */
+const reviewPlaceholderImages = [
+  "https://via.placeholder.com/80x80?text=IMG",
+  "https://via.placeholder.com/80x80?text=PIC",
+  "https://via.placeholder.com/80x80?text=PHOTO"
+];
+
   
 const products = [
 {
@@ -1092,6 +1194,26 @@ specs:{
 }
 }
 ];
+
+/* 🔥 AUTO PRICE & DISCOUNT SYSTEM 🔥 */
+function applyGlobalPricing(){
+  products.forEach(p => {
+
+    // 295–299 random price
+    let newPrice = Math.floor(Math.random() * 5) + 295;
+
+    p.price = newPrice;
+
+    // Discount percentage auto
+    let discount = Math.round(((p.mrp - p.price) / p.mrp) * 100);
+
+    p.off = discount + "%";
+  });
+}
+
+/* APPLY ON LOAD */
+applyGlobalPricing();
+
   
 const list=document.getElementById("list");  
   
@@ -1900,6 +2022,35 @@ function fetchCityFromPincode(pin){
       alert("Pincode service not available");
     });
 }
+
+function toggleShare(){
+  let box = document.getElementById("shareBox");
+  box.style.display = box.style.display === "block" ? "none" : "block";
+
+  let url = window.location.href;
+  let text = "Check this product on ShopOne";
+
+  document.getElementById("shareWhatsapp").href =
+    "https://wa.me/?text=" + encodeURIComponent(text + " " + url);
+
+  document.getElementById("shareFacebook").href =
+    "https://www.facebook.com/sharer/sharer.php?u=" + encodeURIComponent(url);
+
+  document.getElementById("shareTwitter").href =
+    "https://twitter.com/intent/tweet?url=" + encodeURIComponent(url);
+
+  document.getElementById("shareGmail").href =
+    "mailto:?subject=ShopOne&body=" + encodeURIComponent(text + " " + url);
+
+  document.getElementById("shareInstagram").onclick = function(){
+    navigator.clipboard.writeText(url);
+    alert("Link copy ho gaya. Instagram app me paste karein.");
+  }
+}
+
+
+
+
 
 
 
